fix a pooling bug, add a convenience method to XmlTransformUtility